syntax = "proto3";

option java_package = "proto";

service SpringChecker {
  rpc GiveInfoSpring (ZodiacRequest) returns (ZodiacReply) {}
}
service SummerChecker {
  rpc GiveInfoSummer (ZodiacRequest) returns (ZodiacReply) {}
}
service AutumnChecker {
  rpc GiveInfoAutumn (ZodiacRequest) returns (ZodiacReply) {}
}
service WinterChecker {
  rpc GiveInfoWinter (ZodiacRequest) returns (ZodiacReply) {}
}

message ZodiacRequest {
  string date = 1;
}
message ZodiacReply {
  string result = 1;
}